--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
-    <application
+    <application android:name="com.example.entry.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
